setup flask in docker

--- a/nginx.conf
+++ b/nginx.conf
@@ -48,6 +48,10 @@ http {
             alias /static;
         }
         
+        location /api {
+            include uwsgi_params;
+            uwsgi_pass unix:/tmp/camap.sock;
+        } 
     
     }
 }
