--- a/Dockerfile_camap
+++ b/Dockerfile_camap
@@ -3,9 +3,16 @@ RUN rm -r /etc/nginx/conf.d/*
 
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY static /static
+COPY *.py ./
+COPY start.sh /
 
 RUN apt-get update
-RUN apt-get install --yes build-essential python python-dev python-pip
-RUN pip install uwsgi
+RUN apt-get install --yes build-essential python3 python3-dev python3-pip uwsgi uwsgi-src
+COPY requirements.txt /
+ENV PYTHON=python3
+RUN pip3 install -r requirements.txt
+RUN uwsgi --build-plugin "/usr/src/uwsgi/plugins/python python3"
+RUN mv python3_plugin.so /usr/lib/uwsgi/plugins/python3_plugin.so
+RUN chmod 644 /usr/lib/uwsgi/plugins/python3_plugin.so
 EXPOSE 80/tcp
-CMD nginx -g "daemon off;"
+CMD ./start.sh
