--- a/Dockerfile_camap
+++ b/Dockerfile_camap
@@ -5,10 +5,11 @@ COPY nginx.conf /etc/nginx/nginx.conf
 COPY static /static
 COPY *.py ./
 COPY start.sh /
+COPY requirements.txt /
+COPY sql /sql
 
 RUN apt-get update
 RUN apt-get install --yes build-essential python3 python3-dev python3-pip uwsgi uwsgi-src
-COPY requirements.txt /
 ENV PYTHON=python3
 RUN pip3 install -r requirements.txt
 RUN uwsgi --build-plugin "/usr/src/uwsgi/plugins/python python3"
