--- a/Dockerfile_camap
+++ b/Dockerfile_camap
@@ -9,11 +9,13 @@ COPY requirements.txt /
 COPY sql /sql
 
 RUN apt-get update
-RUN apt-get install --yes build-essential python3 python3-dev python3-pip uwsgi uwsgi-src
+RUN apt-get install --yes build-essential python3 python3-dev python3-pip uwsgi uwsgi-src default-libmysqlclient-dev
 ENV PYTHON=python3
 RUN pip3 install -r requirements.txt
 RUN uwsgi --build-plugin "/usr/src/uwsgi/plugins/python python3"
 RUN mv python3_plugin.so /usr/lib/uwsgi/plugins/python3_plugin.so
 RUN chmod 644 /usr/lib/uwsgi/plugins/python3_plugin.so
+RUN mkdir data
+RUN chown nginx data
 EXPOSE 80/tcp
 CMD ./start.sh
